<resources>
    <string name="app_name">Diageo Aliados</string>
    <string name="action_settings">Settings</string>
    <string name="txt_pass">Password</string>
    <string name="txt_send">INGRESAR</string>
    <string name="txt_error">Error</string>
    <string name="txt_error_pass">Contraseña incorrecta</string>
    <string name="txt_cerrar">Cerrar</string>
    <string name="txt_family_zacapa">
        Ron Zacapa nace en una pequeña comunidad Guatemalteca llamada Zacapa, durante la celebración de su centenario.
        Para su elaboración, utilizamos la delicada miel virgen de caña, la cual se obtiene del primer prensado de la caña de azúcar.
        El complejo añejamiento de Zacapa le dan un carácter y personalidad única, ya que se lleva a más de 2300 m de altura en la casa por encima de las
        nubes donde el frio ayuda al pausado y lento añejamiento .

        Cada botella de Ron Zacapa es una pieza de Artesanía, ya que el aro de petate que la adorna es elaborado por manos de mujeres indígenas que
        plasman la gran tradición maya que se vive en Guatemala.

        Ron Zacapa 23 ha sido reconocido a nivel internacional, siendo galardonado por 5 años consecutivos como el
        mejor Ron del mundo, ganando así el único lugar en el “Hall de la fama de los Rones” y el titulo vitalicio de Ron Zacapa el Mejor Ron del Mundo.


    </string>
    <string name="txt_jw">Desde sus humildes comienzos, Johnnie Walker ha crecido hasta convertirse la casa más grande Scotch Whisky en el mundo, conocido por grandes sabores y mezclas de expertos. La creación de la icónica marca mundial empezó justo cuando un joven granjero de 15 años se hizo cargo de una tienda de abarrotes de Kilmarnock en 1.820. El niño fue llamado John Walker, quien con su empuje y dedicación a la excelencia, creó un negocio próspero que dejó de herencia a las siguientes generaciones de su familia, convirtiéndose luego empresa de whisky de alta calidad internacional. El viaje continúa en la actualidad, con JOHNNIE WALKER un icono reconocido de progreso personal, una marca sofisticada de alto estatus y dinámica que se vende en casi 200 países de todo el mundo.</string>
    <string name="txt_rep_video">Reproducir Video</string>
    <string name="txt_download_videos">Descargando videos</string>
    <string-array name="brew_array">
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </string-array>
    <string name="txt_bl_one">Sólo 1 de cada 10.000 barricas de las 4 regiones de Escocia es apta para la mezcla de este whisky.</string>
    <string name="txt_bl_two">Jim Beveridge, Maestro Mezclador usa 190 años de la experiencia que tiene la Casa Walker para mezclar y madurar cuidadosamente en pequeñas barricas.</string>
    <string name="txt_bl_three">Johnnie Walker® Blue Label® recrea el sabor de los whiskys del siglo XIX, una poderosa ola con un sedoso y poderoso final.</string>
    <string name="text_title_seccion">Como Servir</string>
    <string name="text_title_drink">Johnnie Walker Blue Label </string>
    <string name="text_content_drink">El intenso sabor a frutas secas, chocolate obscuro y ricas especias de Johnnie Walker Etiqueta Azul® debe disfrutarse lentamente…</string>
    <string name="text_sub_title">Preparación:</string>
    <string name="text_content_subtitle">Debe ser disfrutado junto a un vaso de agua con hielo, que debe ser probado primero para limpiar el paladar y agudizar los sentidos.</string>
    <string name="popupuno">Elegante botella alta y femenina de vidrio oscuro que permite proteger la calidad del contenido, perfecta para cualquier refrigerador</string>
    <string name="txt_mensaje_baileys_uno">Mezcla única.- Crema de whiskey irlandesa, hecha a base de chocolate, vainilla, azúcar, crema de leche irlandesa y whiskey irlandés</string>
    <string name="txt_mensaje_baileys_dos">Natural.- Es un producto 100% natural y no contiene conservadores.</string>
    <string name="txt_mensaje_baileys_tres">Líder mundial.- Marca de licor número 1 en ventas en México y en el mundo</string>
    <string name="title_como_servir_baileys">Baileys con Café</string>
    <string name="parrafo_uno_como_servir_baileys">60 ml de Baileys servido en tu café favorito ya sea frío o en las rocas</string>
    <string name="parrafo_dos_como_servir_baileys">También se recomienda en las rocas, con hielo frappe , postres o sobre helado</string>
    <string name="txt_mensaje_baileys_dulce_uno">Mezcla para consentir .-  Deliciosa \ncombinación del Bailey´s de siempre con el rico sabor de Dulce de Leche</string>
    <string name="txt_mensaje_baileys_dulce_dos">Garantía de Calidad.- Mantiene los más altos estándares de calidad y la perfección de la mezcla de Baileys Original</string>
    <string name="txt_mensaje_baileys_dulce_tres">Paladar Latino.- Desarrollado\n exclusivamente para Latinoamérica, una variante más Premium creada para consentir a la mujer latina</string>
    <string name="parrafo_uno_como_servir_baileys_dulce">Baileys Dulce de Leche, Servido con hielo, hielo frappé o simplemente frío</string>
    <string name="txt_mensaje_tanqueray_london_uno">4 Destilaciones y 4 extractos botánicos dan como resultado un sabor sólido, suave y perfectamente balanceado.</string>
    <string name="txt_mensaje_tanqueray_london_dos">Es la ginebra más premiada y más vendida del mundo.</string>
    <string name="txt_mensaje_tanqueray_london_tres">Ginebra con más de 180 años de herencia y experiencia en destilación iniciadas por Charles Tanqueray en 1830.</string>
    <string name="parrafo_uno_como_servir_tanqueray_london">Gin &amp; Tonic en copa globo alta.</string>
    <string name="txt_mensaje_tanqueray_ten_uno">Es la única Ginebra que en el Salón de la Fama de San Francisco, es un líquido de clase mundial.</string>
    <string name="txt_mensaje_tanqueray_ten_dos">Es la única Ginebra que usa frutos cítricos enteros (naranjas, toronjas y limón mexicano) en el proceso de destilación.</string>
    <string name="txt_mensaje_tanqueray_ten_tres">Creada con casi 200 años de conocimiento en destilación, manteniendo la búsqueda de la perfección del fundador Charles Tanqueray.</string>
    <string name="parrafo_uno_como_servir_tanqueray_ten">Gin &amp; Tonic en copa globo alta.</string>
    <string name="title_zacapa_xo_uno">SOFISTICADO Y COMPLEJO:</string>
    <string name="title_zacapa_xo_content_uno">Ron Zacapa XO termina su añejamiento en finas barricas de roble francés las cuales acentúan las notas extraordinarias de especias y madera dando un perfil complejo y elegante</string>
    <string name="title_zacapa_xo_dos">EL COGNAC DE LOS RONES:</string>
    <string name="title_zacapa_xo_content_dos">La elegancia en el bouquet y sabor de Ron Zacapa XO, han hecho que la gente lo catalogue como el Cognac de los Rones, su perfil balanceado y especiado con rones de hasta 25 años de añejamiento hacen este Ron una pieza inigualable</string>
    <string name="title_zacapa_xo_tres">SABOR EXCEPCIONAL:</string>
    <string name="title_zacapa_xo_content_tres">Ron Zacapa XO se disfruta solo debido al gran balance y complejidad de la mezcla, la cual recuerda notas de especies como canela y frutos maduros como ciruelas pasas y cerezas negras. Riedel creo la copa Ron Zacapa para disfrutar este gran espirituoso de manera ideal.</string>
    <string name="title_zacapa_23_one">Miel pura de caña de azúcar </string>
    <string name="title_zacapa_23_content_uno">Realizado artesanalmente de miel de caña de azúcar, sin melazas. Zacapa realiza completamente el proceso de llevar el ron de la caña a la botella.</string>
    <string name="title_zacapa_23_dos">Añejado por encima de las nubes  </string>
    <string name="title_zacapa_23_content_dos">Mezclado a la perfección en tres diferentes tipos de barricas de roble en un clima frío a gran altura sobre el nivel del mar. </string>
    <string name="title_zacapa_23_tres">Para disfrutarse mejor solo o en las rocas</string>
    <string name="title_zacapa_23_content_tres">Su gusto excepcional, lo ha llevado a ser el primer ron en todos los tiempos dentro del Salón Internacional de la Fama del Ron.</string>
    <string name="como_tomar_zacapa_23">Tomar solo o en las rocas.</string>
    <string name="txt_captain_morgan_uno">Es una marca que inspira tiempos legendarios.</string>
    <string name="txt_captain_morgan_dos">Ron especiado de sabor suave y toques sabor a vainilla, perfecto para mezclar con refresco de Cola.</string>
    <string name="txt_captain_morgan_tres">Marca No 1 con mayor crecimiento dentro del portafolio de Diageo.</string>
    <string name="text_subtitle_seccion_capitan_morgan">Captain &amp; Coke</string>
    <string name="text_content_subtitle_capitan_morgan">Captain Morgan®</string>
    <string name="text_subtitle_seccion_dos_capitan_morgan">Preparación:</string>
    <string name="text_content_subtitle_dos_capitan_morgan">60 ml. Captain Morgan \n300 ml. Refresco de Cola \nAdornar con un slide de \nlimón</string>
    <string name="txt_captain_morgan_black_uno">Captain Morgan Black es el lado más oscuro de Captain Morgan.</string>
    <string name="txt_captain_morgan_black_dos">Un ron más audaz que tiene la masculinidad del whisky y la facilidad de tomar de Captain.</string>
    <string name="txt_captain_morgan_black_tres">Elaborado con ron del Caribe y especias selectas y madurado en barricas  de roble extra ahumadas.</string>
    <string name="text_subtitle_seccion_capitan_morgan_black">En las rocas o con tu mezclador favorito (Cola/Ginger Ale).</string>
    <string name="txt_captain_morgan_white_uno">Ron blanco (no especiado) de la familia Captain Morgan.</string>
    <string name="txt_captain_morgan_white_dos">2 veces destilado  y 5 veces filtrado para entregar un sabor más suave y con un menor golpe alcohólico que el ron de siempre.</string>
    <string name="text_subtitle_seccion_capitan_morgan_white">Captain &amp; Coke</string>
    <string name="text_content_subtitle_capitan_morgan_white">Captain Morgan White®</string>
    <string name="text_subtitle_seccion_dos_capitan_morgan_white">Preparación:</string>
    <string name="text_content_subtitle_dos_capitan_morgan_white">60 ml. Captain Morgan White \n300 ml. Refresco de Cola \nAdornar con un slide de limón</string>
    <string name="title_don_julio_setenta_one">Experiencia e Innovación</string>
    <string name="title_don_julio_setenta_content_uno">Combina la suavidad de un Blanco y la complejidad de un Añejo para brindar un sabor al tequila totalmente único</string>
    <string name="title_don_julio_setenta_dos">Hablemos de Tequila</string>
    <string name="title_don_julio_setenta_content_dos">Primer tequila añejo cristalino. Llega para redefinir la categoría de Tequila</string>
    <string name="title_don_julio_setenta_tres">Añejo cristalino</string>
    <string name="title_don_julio_setenta_content_tres">Añejado durante 18 meses y filtrado en  carbono para obtener su característico perfil cristalino</string>
    <string name="menu_z">Zacapa</string>
    <string name="menu_jw">Johnnie Walker</string>
    <string name="menu_b">Buchanan\'s</string>
    <string name="menu_t">Tanqueray</string>
    <string name="menu_dj">Don Julio</string>
    <string name="menu_whisky">Whisky</string>
    <string name="menu_tequila">Tequila</string>
    <string name="menu_ron">Ron</string>
    <string name="menu_vodka">Vodka</string>
    <string name="menu_gin">Gin</string>
    <string name="menu_licor">Licor</string>
    <string name="menu_intro">Introducción</string>
    <string name="menu_process_cognac">Cognac</string>
    <string name="menu_process_ginebra">Ginebra</string>
    <string name="menu_process_ron">Ron</string>
    <string name="menu_process_vodka">Vodka</string>
    <string name="menu_process_whisky">Whisky</string>
    <string name="menu_process_tequila">Tequila</string>
</resources>